overflow + copyright fixed

--- a/styles/styles.less
+++ b/styles/styles.less
@@ -2,6 +2,7 @@ html, body {
     overflow: overlay;
     height: unset !important;
     min-height : 100%;
+    overflow-x : hidden;
 }
 
 .app-view {
@@ -105,7 +106,7 @@ html, body {
     }
 
     .copyright {
-        position : absolute;
+        position : fixed;
         bottom: 20px;
         right: 10px;
         font-size: 0.6em;
